--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,10 @@
-/* reset */
+/* header */
+
+
+.header-top{
+    background-color: black;
+}
+.header-top > img{
+    height: 20px;
+    margin: 10px;
+}
