--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,11 @@
     height: 20px;
     margin: 10px;
 }
+.btn_round{
+    border-radius: 30px;
+    padding-inline: 20px;
+}
+.btn_invisible{
+    border:none;
+    background: none;
+}
