--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,18 @@
 /* header */
 
-
+header{
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
 .header-top{
     background-color: black;
 }
 .header-top > img{
     height: 20px;
-    margin: 10px;
+    margin: 12px;
 }
 .btn_round{
     border-radius: 30px;
@@ -16,3 +22,41 @@
     border:none;
     background: none;
 }
+/* main */
+main{
+    padding-top: 110px;
+}
+.hero_img{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    object-fit: cover;
+}
+.hero_container{
+    position: relative;
+}
+.hero_container::after{
+    content: "";
+    display: block;
+    padding-top: 40%;
+}
+.hero_text{
+    z-index: 9;
+    color: white;
+}
+.banner{
+    width: 50%;
+}
+/* carosel hero */
+.carosel{
+    margin-top: 16;
+}
+.card_image > img{
+    width: 100%;
+    border-radius: 20px;
+}
+
