--- a/css/style.css
+++ b/css/style.css
@@ -59,4 +59,9 @@ main{
     width: 100%;
     border-radius: 20px;
 }
+/* console ps5 */
+.text_blu{
+    color: blue;
+    font-size: smaller;
+}
 
