--- a/css/style.css
+++ b/css/style.css
@@ -92,3 +92,22 @@ main{
     background-color: #161C3B;
     color: white;
 }
+/* media */
+.media_img > img{
+    width: 100%;
+}
+
+/* footer */
+.footer{
+    background-color: blue;
+    color: white;
+}
+.list-group > a{
+    background-color: none;
+    border: none;
+    color: white;
+    text-decoration: none;
+}
+.sie-logo > img{
+    max-width: 110px;
+}
