--- a/css/style.css
+++ b/css/style.css
@@ -47,11 +47,15 @@ main{
 .hero_text{
     z-index: 9;
     color: white;
-    position: absolute;
-    bottom: 20px;
+    /* position: absolute;
+    bottom: 20px; */
 }
+/* .row_hero{
+    position: relative;
+    margin-bottom: 0;
+} */
 .banner{
-    max-width: 300px;
+    width: 50%;
 }
 /* carosel hero */
 /* .carosel{
